# GEOS-CF-Bias-Correction

./: .gitignore  Dockerfile  LICENSE  README.md  S3_INTEGRATION_GUIDE.md  compress.py  environment.yml  generate.py  generate_global_forecasts.py  pyproject.toml  requirements.txt  run-job.sh  tiffs.py
MLpred/: bias_corrector.py  funcs.py  geos_fp_cnn.py  mlpred.py  pandora.py  s3_manager.py
