[project]
name = "geos-cf-bias-correction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "basemap",
  "boto3>=1.40.31",
  "bs4",
  "cartopy",
  "fsspec",
  "geopy",
  "ipython",
  "lightgbm",
  "matplotlib",
  "numpy<2.0",
  "pandas",
  "plotly",
  "pyod",
  "requests",
  "s3fs>=0.4.2",
  "scikit-learn",
  "scipy",
  "seaborn",
  "shap",
  "timezonefinder",
  "tqdm",
  "xarray",
  "xgboost",
  "zarr",
]
