[project]
name = "geos-cf-bias-correction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "basemap>=1.4.0",
  "beautifulsoup4>=4.10.0",
  "boto3>=1.26.0",
  "botocore>=1.29.0",
  "bs4",
  "cartopy>=0.20.0",
  "certifi>=2022.0.0",
  "charset-normalizer>=2.0.0",
  "fsspec>=2022.0.0",
  "geopy>=2.2.0",
  "h5py>=3.5.0",
  "idna>=3.0",
  "ipython>=8.0.0",
  "joblib>=1.1.0",
  "jupyter>=1.0.0",
  "jupyter-client>=7.0.0",
  "jupyter-core>=5.0.0",
  "lightgbm>=3.3.0",
  "matplotlib>=3.4.0",
  "netcdf4>=1.5.8",
  "numpy>=1.21.0",
  "pandas>=1.3.0",
  "pillow>=9.0.0",
  "plotly>=5.0.0",
  "pyod>=1.0.0",
  "pyproj>=3.4.0",
  "python-dateutil>=2.8.0",
  "python-dotenv>=0.19.0",
  "pytz>=2021.3",
  "rasterio>=1.2.0",
  "requests>=2.27.0",
  "s3fs>=2022.10.0",
  "scikit-learn>=1.0.0",
  "scipy>=1.7.0",
  "seaborn",
  "shap>=0.40.0",
  "shapely>=1.8.0",
  "timezonefinder>=5.2.0",
  "tqdm>=4.62.0",
  "urllib3>=1.26.0",
  "xarray>=0.20.0",
  "xgboost>=1.5.0",
  "zarr>=2.11.0",
]
